redis-manifest.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis-stedi-pius
spec:
  selector:
    matchLabels:
      app: redis-stedi-pius # has to match .spec.template.metadata.labels
  serviceName: redis-stedi-pius
  replicas: 1
  template:
    metadata:
      labels:
        app: redis-stedi-pius # has to match .spec.selector.matchLabels
    spec:
      containers:
      - name: redis-stedi-pius
        image: redis:7.0.5-alpine
        imagePullPolicy: Always
        args: ["--requirepass", "$(REDIS_PASS)", "--appendonly", "yes", "--save", "900", "1", "--save", "30", "2"]
        ports:
        - containerPort: 6379
          name: redis
        volumeMounts:
        - name: redis-pius-volume
          mountPath: /data
  volumeClaimTemplates:
  - metadata:
      name: redis-pius-volume
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 10Gi
---
apiVersion: v1
kind: Service
metadata:
  name: redis-stedi-pius
spec:
  ports:
  - port: 6379
    name: redis
  clusterIP: None
  selector:
    app: redis-stedi-pius
